Fixed the issue of video to show up on small desvices

--- a/Design System/stylesheet.css
+++ b/Design System/stylesheet.css
@@ -112,10 +112,17 @@ h2{font-size: 2.8rem;}
   .home-vision-div2{
     position: relative;
   padding-bottom: calc(var(--aspect-ratio, 0.5625) * 100%);
-  margin: 4% auto;
+  margin: 4% 0%;
   height: 0;
   order: 1;
   }
+  .home-vision-video {
+      background-color: #191b1a;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border: 0px;
+    }
   /* color page */
   .color-first{padding: 10px 40px; background-color: #191b1a;}
   .color-first p{color: white;}
